# libfbsdvmcore

./: CMakeLists.txt  kvm.3  kvm.c  kvm.h  kvm_amd64.c  kvm_arm.c  kvm_close.3  kvm_cptime.c  kvm_geterr.3  kvm_getloadavg.c  kvm_getpcpu.3  kvm_getprocs.3  kvm_getswapinfo.3  kvm_getswapinfo.c  kvm_i386.c  kvm_i386.h  kvm_minidump_aarch64.c  kvm_minidump_amd64.c  kvm_minidump_arm.c  kvm_minidump_i386.c  kvm_minidump_mips.c  kvm_minidump_powerpc64.c  kvm_minidump_powerpc64_hpt.c  kvm_minidump_riscv.c  kvm_nlist.3  kvm_nlist2.3  kvm_open.3  kvm_open2.3  kvm_pcpu.c  kvm_powerpc64.c  kvm_private.c  kvm_private.h  kvm_proc.c  kvm_read.3  kvm_read2.3  kvm_read_zpcpu.3  kvm_vnet.c
cmake/: FBSDVMCoreConfig.cmake.in
lib/: config.h.in  fvc.c  fvc.h  fvc_aarch64.h  fvc_amd64.h  fvc_arm.c  fvc_i386.c  fvc_minidump_aarch64.c  fvc_minidump_amd64.c  fvc_minidump_arm.c  fvc_minidump_i386.c  fvc_minidump_mips.c  fvc_minidump_powerpc64.c  fvc_minidump_powerpc64_hpt.c  fvc_minidump_riscv.c  fvc_mips.h  fvc_powerpc.c  fvc_powerpc64.c  fvc_powerpc64.h  fvc_private.c  fvc_private.h
lib/minidump/: README
man/: fbsdvmcore.3  fvc.3  fvc_close.3  fvc_geterr.3  fvc_kerndisp.3  fvc_native.3  fvc_open.3  fvc_open2.3  fvc_read.3  fvc_read2.3  fvc_write.3  kvm_kerndisp.3  kvm_open2.3
src/: fvc.c  fvc.h  fvc_aarch64.h  fvc_amd64.c  fvc_amd64.h  fvc_arm.c  fvc_arm.h  fvc_i386.c  fvc_i386.h  fvc_minidump_aarch64.c  fvc_minidump_amd64.c  fvc_minidump_arm.c  fvc_minidump_i386.c  fvc_minidump_mips.c  fvc_minidump_powerpc64.c  fvc_minidump_powerpc64_hpt.c  fvc_minidump_riscv.c  fvc_mips.h  fvc_powerpc.c  fvc_powerpc64.c  fvc_powerpc64.h  fvc_private.c  fvc_private.h  fvc_riscv.h  kvm.h  kvm_amd64.c  kvm_arm.c  kvm_i386.c  kvm_minidump_amd64.c  kvm_minidump_powerpc64.c  kvm_minidump_powerpc64_hpt.c  kvm_minidump_riscv.c  kvm_powerpc.c  kvm_private.h  minidump-to-elf.c
tests/: CMakeLists.txt  fvc_close_test.c  fvc_geterr_test.c  fvc_open2_test.c  fvc_open_test.c  fvc_read_test.c  fvc_test_common.c  fvc_test_common.h  kvm_close_test.c  kvm_geterr_test.c  kvm_open2_test.c  kvm_read_test.c
